---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/headers/invalid_connect_http_headers.graphql
---
[
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.resources` either `from` or `value` must be set",
        locations: [
            12:11..12:39,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.resources` missing `name` field",
        locations: [
            13:11..13:37,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.resources` `from` and `value` can't be set at the same time",
        locations: [
            14:37..14:41,
            14:61..14:66,
        ],
    },
    Message {
        code: HttpHeaderNameCollision,
        message: "Duplicate header names are not allowed. The header name 'x-name-collision' at `@connect(http.headers:)` on `Query.resources` is already defined.",
        locations: [
            16:19..16:37,
            15:19..15:37,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.resources` the value `<Invalid-Header>` is an invalid HTTP header name",
        locations: [
            17:19..17:37,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.resources` the value `<Invalid-Header>` is an invalid HTTP header name",
        locations: [
            18:43..18:61,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.resources` header 'content-length' is reserved and cannot be set by a connector",
        locations: [
            23:19..23:35,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.resources` header 'content-type' can't be set with `from`, only with `value`",
        locations: [
            24:19..24:33,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.resources` header 'accept' can't be set with `from`, only with `value`",
        locations: [
            25:19..25:27,
        ],
    },
]
